Clean up various warnings
Signed-off-by: Matt Sicker <mattsicker@apache.org>